--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,7 @@
    "id": "db3eab6f-ec72-46d5-a9d8-4865fc2a1681",
    "metadata": {},
    "source": [
-    "# Project\n",
+    "# MSE 211 MDP Project\n",
     "\n",
     "We can do the project here"
    ]
